# vuanem_ecom_scrape

./: .gitignore  main.py  pyproject.toml  tiki.json
exports/: [lazada]__[zinus-official-store]__[2021-09-22].json  [shopee]__[vua_nem_official_store]__2021-09-28.json  [shopee]__[vua_nem_official_store]__2021-09-30.json  [tiki]__[dem-ha-noi]__2021-09-28.json  [tiki]__[dem-ha-noi]__[2021-09-22].json  [tiki]__[dem-ha-noi]__[2021-09-27].json  [tiki]__[nem-gia-kho]__2021-09-28.json  [tiki]__[nem-gia-kho]__[2021-09-22].json  [tiki]__[nem-gia-kho]__[2021-09-27].json  [tiki]__[ru9-the-sleep-company]__2021-09-28.json  [tiki]__[ru9-the-sleep-company]__[2021-09-22].json  [tiki]__[ru9-the-sleep-company]__[2021-09-27].json  [tiki]__[vua-nem-official-store]__2021-09-28.json  [tiki]__[vua-nem-official-store]__2021-09-30.json  [tiki]__[vua-nem-official-store]__[2021-09-22].json  [tiki]__[vua-nem-official-store]__[2021-09-27].json  [tiki]__[zinus-official-store]__2021-09-28.json  [tiki]__[zinus-official-store]__[2021-09-22].json  [tiki]__[zinus-official-store]__[2021-09-27].json
