[tool.poetry]
name = "vuanem_tiki_scrape"
version = "0.1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2.26.0"
fake-useragent = "^0.1.11"
aiohttp = "^3.7.4"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
